--- a/styles/architect.css
+++ b/styles/architect.css
@@ -64,7 +64,7 @@ nav > ul{
     width: 100%;
     margin-top: 20px;
 }
-/* responsive media queris */
+/* responsive media queris
 @media screen and (max-width: 576px) {
     header{
         padding: 20px;
@@ -75,18 +75,18 @@ nav > ul{
     
 }
 /* tablet or medium devices */
-@media screen and (min-width: 576px) and (max-width: 992px) {
+/* @media screen and (min-width: 576px) and (max-width: 992px) {
     header{
         padding: 50px;
     }
     nav{
         flex-direction: column;
     }  
-}
+} */ */
 /* main styles */
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 /* teams styles */
 .teams-container{
@@ -126,3 +126,32 @@ main{
     font-size: 1rem;
     font-weight: 400px;
 }
+/* responsive media queris */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    .teams-container{
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    
+}
+/* tablet or medium devices */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    header{
+        padding: 50px;
+    }
+    nav, .teams-container{
+        flex-direction: column;
+    } 
+} 
