--- a/styles/architect.css
+++ b/styles/architect.css
@@ -126,6 +126,62 @@ main{
     font-size: 1rem;
     font-weight: 400;
 }
+/* feature section */
+.feature{
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+.feature-content .card{
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+.feature-img img{
+    height: 90%;
+    margin-left: 90px;
+}
+.ten-years-badgs{
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 340px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+.ten-years-badgs h2{
+        font-size: 4rem;
+        margin:0 ;
+}
+.ten-years-badgs p{
+        font-size: 1.5rem;
+}
+.feature-heading{
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+    border-left:5px solid #FF900E ;
+    padding-left: 20px;
+}
+.feature-description{
+    color:  #727272;
+    font-size: 1rem;
+    font-weight: 400;
+}
+.feature-card-heading{
+    color: #131313;
+    font-size:1rem;
+    font-weight: 600;
+}
+.feature-card-description{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+}
 /* facts section */
 .facts-card-container{
     display: flex;
@@ -183,10 +239,18 @@ main{
     .banner-heading{
         font-size: 20px;
     }
-    .teams-container,
+    .teams-container,.feature,
      .facts-card-container, 
      .sponsors-img-container{
         flex-direction: column;
+    }
+    .ten-years-badgs{
+        position:static ;
+        max-width: 300px;
+    }
+    .feature-img img{
+        width: 90%;
+        margin-left: 0;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
@@ -209,7 +273,7 @@ main{
     header{
         padding: 50px;
     }
-    nav, .teams-container,
+    nav, .teams-container,.feature,
     .sponsors-img-container{
         flex-direction: column;
     } 
