--- a/styles/architect.css
+++ b/styles/architect.css
@@ -5,6 +5,9 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Work Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 
   /* header style */
@@ -92,16 +95,20 @@ main{
 .teams-container{
     display: flex;
     align-items: center;
+    margin-top: 60px;
+    margin-left:210px ;
+    margin-right: 200px;
+    gap: 20px;
 }
 .teams-img-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
 }
-.teams-content{
+/* .teams-content{
     padding-right:70px ;
-    padding-left:70px ;
-}
+    padding-left:70px ; */
+/* } */
 .team-heading{
     font-size: 2.8rem;
 
@@ -131,17 +138,25 @@ main{
     margin-top: 130px;
     display: flex;
     gap: 100px;
+    /* margin-left:210px ;
+    margin-right: 200px; */
 }
+/* .feature-content{
+    width: 50%;
+} */
+
 .feature-content .card{
     padding: 30px;
     margin-bottom: 20px;
+    /* margin-left: 20px; */
     border-radius: 8px;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
 .feature-img img{
+    /* width: 100%; */
     height: 90%;
-    margin-left: 90px;
+     margin-left: 90px;
 }
 .ten-years-badgs{
     border-radius: 8px;
@@ -187,6 +202,10 @@ main{
     display: flex;
     justify-content: space-around;
 }
+.fact-description{
+    margin-left: 60px;
+    margin-bottom: 30px;
+}
 .facts-card-container .card{
     border-radius: 8px;
     border: 1px solid #FF900E;
@@ -231,6 +250,26 @@ main{
 .sponsors-img-container img{
     width:165px ;
 }
+/* footer section */
+.footer{
+    width: 1440px;
+    height: 100px;
+    border-radius: 8px;
+    background: #FFF4E7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+.footer-header{
+    color: #424242;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-align: center;
+}
+
 /* responsive media queris */
 @media screen and (max-width: 576px) {
     header{
@@ -249,22 +288,42 @@ main{
         max-width: 300px;
     }
     .feature-img img{
-        width: 90%;
-        margin-left: 0;
+        width:90%;
+        height: 100%;
+        margin-left:0;
     }
+    /* .feature-content{
+        width: 100%;
+    } */
+    /* .feature-heading{
+        padding: 20px;
+    } */
     .teams-img-container{
         grid-template-columns: 1fr;
     }
+    .teams-heading{
+        width: 100%;
+    }
+    /* .teams-content{
+        width: 100%;
+    } */
     .teams-content,
      .facts-card-container{
         padding-left: 20px;
         padding-right: 20px;
+    }
+    .facts{
+        width: 100%;
     }
     .facts-card-container{
         gap: 20px;
     }
     nav{
         flex-direction: column;
+    }
+    .footer{
+          width: 100%;  
+          margin-right: 0;
     }
     
 }
